# fleet-watch

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.claude/hooks/: session-start.sh
.github/workflows/: cd.yml  ci.yml
app/: .env.example  README.md  docker-compose.yml
app/api/: alembic.ini  pyproject.toml
app/api/alembic/: env.py
app/api/alembic/versions/: 0001_init.py
app/api/app/: alerts.py  config.py  db.py  generator.py  main.py  models.py  redis_bus.py
app/api/app/routes/: events.py  health.py  stream.py  telemetry.py  vehicles.py
app/api/tests/: conftest.py  test_alerts.py  test_generator.py  test_models.py
app/api/tests/fixtures/: sample_telemetry.json
app/web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/web/src/: App.tsx  styles.css
app/web/src/api/: client.ts  sse.ts
app/web/src/components/: AlertFeed.tsx  EventList.tsx  FleetMap.tsx  Gauge.test.tsx  Gauge.tsx  HistoryChart.tsx  KpiBar.tsx
app/web/src/hooks/: useFleetStream.ts  useVehicleStream.ts
app/web/src/pages/: FleetPage.tsx  VehiclePage.tsx
docker/: api.Dockerfile  nginx.conf  web.Dockerfile
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnomalyTable.tsx  PowerChart.tsx  SiteSelector.tsx  WindowSelector.tsx
frontend/src/hooks/: useAnomalies.ts  usePolling.ts  useTelemetry.ts
frontend/src/types/: index.ts
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: compute-stack.ts  data-stack.ts  frontend-stack.ts  network-stack.ts  observability-stack.ts
scripts/: check_knmi.py  seed_db.py  simulate_panels.py  smoke.sh  wait-healthy.sh
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py
services/api/app/: config.py  database.py  main.py
services/api/app/models/: __init__.py  panel.py  site.py  telemetry.py  weather.py
services/api/app/routers/: panels.py  sites.py  telemetry.py  weather.py
services/api/app/services/: __init__.py  anomaly.py  correlation.py
services/api/tests/: conftest.py
services/api/tests/integration/: test_routes.py
services/api/tests/unit/: test_anomaly.py  test_correlation.py
services/knmi-poller/: pyproject.toml
services/knmi-poller/src/: __init__.py  client.py  handler.py  models.py  parser.py  publisher.py
services/knmi-poller/tests/: conftest.py  test_client.py  test_parser.py  test_publisher.py
services/knmi-poller/tests/fixtures/: knmi_de_bilt.json  knmi_eindhoven.json  knmi_rotterdam.json
services/panel-processor/: pyproject.toml
services/panel-processor/src/: __init__.py  db.py  handler.py  models.py  transform.py
services/panel-processor/tests/: conftest.py  test_handler.py
services/panel-processor/tests/unit/: test_transform.py
