[project]
name = "solar-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.18",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.0",
    "alembic>=1.13.0",
    "boto3>=1.34.0",
    "structlog>=24.1.0",
    "scipy>=1.13.0",
    "aws-lambda-powertools>=2.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "testcontainers[postgres]>=4.4.0",
    "moto[secretsmanager]>=5.0.0",
    "mypy>=1.9.0",
    "sqlalchemy[mypy]>=2.0.0",
    "boto3-stubs[secretsmanager]>=1.34.0",
    "black>=24.3.0",
    "ruff>=0.3.5",
    "isort>=5.13.2",
    "pylint>=3.1.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
# Run `pytest --cov-fail-under=85` in CI for full-suite coverage gate
