[project]
name = "knmi-poller"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "structlog>=24.1.0",
    "aws-lambda-powertools>=2.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "anyio>=4.3.0",
    "moto[kinesis,secretsmanager]>=5.0.0",
    "mypy>=1.9.0",
    "boto3-stubs[kinesis,secretsmanager]>=1.34.0",
    "black>=24.3.0",
    "ruff>=0.3.5",
    "isort>=5.13.2",
    "pylint>=3.1.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
# Run `pytest --cov-fail-under=90` in CI for full-suite coverage gate
